fixed an issue with an excess of whitespace at bottom of page as well as iphone media query problem.

--- a/styles.css
+++ b/styles.css
@@ -450,6 +450,7 @@ so that image just fills up whole with i.e. no padding if small enough screen */
   }
 
   .footer-picture {
-    margin-bottom: -5px;
+    /* to take away a few extra pixels at bottom */
+    font-size: 0;
   }
 }
